--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
     "styles",
     "LICENSE"
   ],
+  "engines": {
+    "node": "^8.10.0"
+  },
   "devDependencies": {
     "@babel/core": "7.4.4",
     "@babel/plugin-proposal-class-properties": "7.4.4",
