--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
   "name": "@gooddata/react-components",
   "version": "7.1.2",
+  "engines": {
+    "node": "^8.10.0"
+  },
   "description": "GoodData React Components",
   "main": "dist/index.js",
   "repository": "git@github.com:gooddata/gooddata-react-components.git",
